@startuml

abstract class Pessoa {
  - id : Long
  - nome : String
  - telefone : String
  - email : String
  - dataCadastro : LocalDateTime
  + Pessoa()
}

class Cliente {
  - documentoIdentidade : String
  - documentoHabilitacao : String
  - endereco : Endereco
  - ativo : boolean
  + static builder() : Builder
}

class "Cliente.Builder" as ClienteBuilder {
  + nome(String) : Builder
  + telefone(String) : Builder
  + email(String) : Builder
  + documentoIdentidade(String) : Builder
  + documentoHabilitacao(String) : Builder
  + endereco(Endereco) : Builder
  + ativo(boolean) : Builder
  + build() : Cliente
}

class Funcionario {
  - matricula : String
  - cargo : Cargo
  - username : String
  - password : String
  - unidade : Unidade
  - ativo : boolean
  + static builder() : Builder
}

class "Funcionario.Builder" as FuncionarioBuilder {
  + nome(String) : Builder
  + telefone(String) : Builder
  + email(String) : Builder
  + matricula(String) : Builder
  + cargo(Cargo) : Builder
  + username(String) : Builder
  + password(String) : Builder
  + unidade(Unidade) : Builder
  + ativo(boolean) : Builder
  + build() : Funcionario
}

enum Cargo {
  GERENTE
  SUPERVISOR
  ATENDENTE
}

class Unidade {
  - id : Long
  - nomeUnidade : String
  - endereco : Endereco
  - veiculos : List<Veiculo>
}

class AuthenticationToken {
  - token : UUID
  - funcionario : Funcionario
  - expiraEm : long
}

class Endereco {
  - logradouro : String
  - numero : String
  - complemento : String
  - bairro : String
  - cidade : String
  - estado : String
  - cep : String
  + Endereco()
  + Endereco(String, String, String, String, String, String, String)
  + static builder() : Builder
}

class "Endereco.Builder" as EnderecoBuilder {
  + logradouro(String) : Builder
  + numero(String) : Builder
  + complemento(String) : Builder
  + bairro(String) : Builder
  + cidade(String) : Builder
  + estado(String) : Builder
  + cep(String) : Builder
  + build() : Endereco
}

class CreateClienteDTO {
  - nome : String
  - telefone : String
  - email : String
  - documentoIdentidade : String
  - documentoHabilitacao : String
  - endereco : Endereco
  + validate() : void
}

class UpdateClienteDTO {
  - nome : String
  - documentoIdentidade : String
  - documentoHabilitacao : String
  - telefone : String
  + validate() : void
}

Pessoa <|-- Cliente
Pessoa <|-- Funcionario
Funcionario "1" -- "1" Cargo
Funcionario "0..*" -- "0..1" Unidade : trabalha em >
AuthenticationToken "0..*" -- "1" Funcionario
Cliente "1" -- "0..1" Endereco
Cliente +-- ClienteBuilder
Funcionario +-- FuncionarioBuilder
Endereco +-- EnderecoBuilder
CreateClienteDTO ..> Cliente
UpdateClienteDTO ..> Cliente

@enduml
